# MDTeamGPT-DevilsAdvocate

./: .gitignore  agents.py  app.py  compute_metrics.py  evaluate.py  experiments.md  main.py  mcnemar_test.py  prepare_dataset.py  pyproject.toml  regrade_results.py  trace_logger.py  utils.py  workflow.py
.devin/rules/: sync.md
